--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,116 +116,126 @@ dependencies {
     })
 
     /**
-     *    事件分发
+     *     事件分发
      */
 
     /**
-     *    View注入框架
+     *     View注入框架
      */
 
     /**
-     *    dialog的框架
+     *     dialog的框架
      */
 
     /**
-     *    刷新的控件（上拉刷新，下拉加载 ）
+     *     刷新的控件（上拉刷新，下拉加载 ）
      */
 
     /**
-     *    OkHttp
+     *     OkHttp
      */
 
     /**
-     *    fastJson
+     *     fastJson
      */
 
     /**
-     *    Logger
+     *     Logger
      */
 
     /**
-     *       对话框
+     *        对话框
      */
 
     /**
-     *    进度对话框
+     *     进度对话框
      */
 
     /**
-     *    View注入框架
+     *     View注入框架
      */
 
     /**
-     *    dialog的框架
+     *     dialog的框架
      */
 
     /**
-     *    刷新的控件（上拉刷新，下拉加载 ）
+     *     刷新的控件（上拉刷新，下拉加载 ）
      */
 
     /**
-     *    OkHttp
+     *     OkHttp
      */
 
     /**
-     *    fastJson
+     *     fastJson
      */
 
     /**
-     *    Logger
+     *     Logger
      */
 
     /**
-     *       对话框
+     *        对话框
      */
 
     /**
-     *    进度对话框
+     *     进度对话框
      */
 
     /**
-     *    运行时权限
+     *     运行时权限
      */
 
     /**
-     *   okhttpfinal
+     *    okhttpfinal
      */
 
     /**
-     *   TalkingData数据统计
+     *    TalkingData数据统计
      */
 
     /**
-     *   viewpageindicatord的使用
+     *    viewpageindicatord的使用
      */
 
     /**
-     *   图片加载框架 glide
+     *    图片加载框架 glide
      */
 
     /**
-     *   zxing 制作二维码
+     *    zxing 制作二维码
+     */
+
+    /**
+     *  lite-orm数据库存储
+     */
+
+    /**
+     *  RecycleView
+     */
+
+    /**
+     *  省市县三级联动
+     */
+
+    /**
+     *    MVCHelper 核心类库
+     */
+
+    /**
+     *  Retrofit+Rxjava+Gson
+     */
+
+    /**
+     *  HelloCharts
+     */
+
+    /**
+     *  weixin
      */
     /**
-     * lite-orm数据库存储
-     */
-    /**
-     * RecycleView
-     */
-    /**
-     * 省市县三级联动
-     */
-    /**
-     *   MVCHelper 核心类库
-     */
-    /**
-     * Retrofit+Rxjava+Gson
-     */
-    /**
-     * HelloCharts
-     */
-    /**
-     * weixin
+     * alipay
      */
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -253,7 +263,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'liji.library.dev:citypickerview:2.0.1'
     compile 'com.shizhefei:MVCHelper-Library:1.3.2'
-
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
@@ -262,5 +271,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-
+    compile files('libs/alipaySdk-20170922.jar')
 }
