--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -223,8 +223,22 @@
         <!--兑换中心-->
         <activity android:name=".activity.ConversionCenterActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/spinner_theme"
-            />
+            android:theme="@style/spinner_theme" />
+        <!--碳控因子兑换-->
+        <activity android:name=".activity.CCFConversionActivity"
+            android:screenOrientation="portrait" />
+        <!--循环劵兑换-->
+        <activity android:name=".activity.CycleCouponConversionActivity"
+            android:screenOrientation="portrait" />
+        <!--消费积分兑换-->
+        <activity android:name=".activity.ConsumptionPointsConversionActivity"
+            android:screenOrientation="portrait" />
+        <!--贡献值记录-->
+        <activity android:name=".activity.Contribute_value_record_Activity"
+            android:screenOrientation="portrait" />
+        <!--交易记录-->
+        <activity android:name=".activity.TransactionRecordActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
