--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,15 +61,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/FullScreen">
-        <activity
-            android:name=".activity.MainPageActivity"
-            android:screenOrientation="portrait"
+        <activity android:name=".activity.MainPageActivity"
             android:theme="@style/PopupMenuTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
         </activity>
         <!-- ********************************************TALKING DATA********************************************************** -->
 
