--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,13 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        flavorDimensions "versionCode"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath = true
+            }
+        }
     }
     aaptOptions {
         //不允许压缩png图片
@@ -27,10 +33,10 @@ android {
             keyPassword properties.getProperty("SIGNING_CONFINGS_DEBUG_KEY_PASSWORD")
         }
         release {
-            storeFile file(properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_FILE"))
-            storePassword properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_PASSWORD")
-            keyAlias properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_ALIAS")
-            keyPassword properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_PASSWORD")
+//            storeFile file(properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_FILE"))
+//            storePassword properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_PASSWORD")
+//            keyAlias properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_ALIAS")
+//            keyPassword properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_PASSWORD")
         }
     }
 
@@ -79,18 +85,26 @@ android {
         }
 
         // 多个变体自定义输出配置
-        applicationVariants.all { variant ->
-            variant.outputs.each { output ->
-                def outputFile = output.outputFile
-                def fileName
-                if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                    if (variant.buildType.name == "debug") {
-                        fileName = "ccf_V${defaultConfig.versionName}_${generateTime()}_debug.apk"
-                    } else if (variant.buildType.name == "release") {
-                        fileName = "ccf_V${defaultConfig.versionName}_${variant.productFlavors[0].name}_${generateTime()}_release.apk"
-                    }
-                    output.outputFile = new File(outputFile.parent, fileName)
-                }
+//        applicationVariants.all { variant ->
+//            variant.outputs.each { output ->
+//                def outputFile = output.outputFile
+//                def fileName
+//                if (outputFile != null && outputFile.name.endsWith('.apk')) {
+//                    if (variant.buildType.name == "debug") {
+//                        fileName = "ccf_V${defaultConfig.versionName}_${generateTime()}_debug.apk"
+//                    } else if (variant.buildType.name == "release") {
+//                        fileName = "ccf_V${defaultConfig.versionName}_${variant.productFlavors[0].name}_${generateTime()}_release.apk"
+//                    }
+//                    def file = new File(fileName)
+//                    output.outputFile = file
+////                  output.outputFile = new File(outputFile.parent, fileName)
+//                }
+//            }
+//        }
+
+        android.applicationVariants.all { variant ->
+            variant.outputs.all {
+                outputFileName = "ccf_V${defaultConfig.versionName}_${generateTime()}_debug.apk"
             }
         }
     }
