--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -234,11 +234,80 @@
         <activity android:name=".activity.ConsumptionPointsConversionActivity"
             android:screenOrientation="portrait" />
         <!--贡献值记录-->
-        <activity android:name=".activity.Contribute_value_record_Activity"
+        <activity android:name=".activity.ContributeValueRecordActivity"
             android:screenOrientation="portrait" />
         <!--交易记录-->
         <activity android:name=".activity.TransactionRecordActivity"
             android:screenOrientation="portrait" />
+        <!--对外转账记录-->
+        <activity android:name=".activity.ExternalTransferActivity"
+            android:screenOrientation="portrait" />
+        <!--自身转账记录-->
+        <activity android:name=".activity.ItselfTransferRecordsActivity"
+            android:screenOrientation="portrait"/>
+        <!--步行记录-->
+        <activity android:name=".activity.WalkRecordActivity"
+            android:screenOrientation="portrait"/>
+        <!--基础贡献率记录-->
+        <activity android:name=".activity.BasicContributionRateRecordActivity"
+            android:screenOrientation="portrait"/>
+        <!--兑换记录-->
+        <activity android:name=".activity.ConversionRecordActivity"
+            android:screenOrientation="portrait"/>
+        <!--电子钱包转账记录-->
+        <activity android:name=".activity.Wallet_Record_Activity"
+            android:screenOrientation="portrait"/>
+        <!--购物记录-->
+        <activity android:name=".activity.ShoppingRecordActivity"
+            android:screenOrientation="portrait"/>
+        <!--碳控公益-->
+        <!--我要捐步-->
+        <activity android:name=".activity.DonateStepActivity"
+            android:screenOrientation="portrait"/>
+        <!--爱心基金-->
+        <activity android:name=".activity.BeneficentFundsActivity"
+            android:screenOrientation="portrait"/>
+        <!--植树基金-->
+        <activity android:name=".activity.PlantTreeFundsActivity"
+            android:screenOrientation="portrait"/>
+        <!--爱心奉献-->
+        <activity android:name=".activity.LoveDedicationActivity"
+            android:screenOrientation="portrait"/>
+        <!--我要乐捐-->
+        <activity android:name=".activity.MeDedicationActivity"
+            android:screenOrientation="portrait"/>
+        <!--发起乐捐-->
+        <activity android:name=".activity.LaunchDedicationActivity"
+            android:screenOrientation="portrait"/>
+        <!--公益一帮一-->
+        <activity android:name=".activity.CommunityHelpOneActivity"
+            android:screenOrientation="portrait"/>
+        <!--发起公益项目-->
+        <activity android:name=".activity.InitiatePublicWelfareProjectsActivity"
+            android:screenOrientation="portrait"/>
+        <!--我的善行记录-->
+        <activity android:name=".activity.MyGoodDeedsRecordActivity"
+            android:screenOrientation="portrait"/>
+        <!--需要帮助-->
+        <activity android:name=".activity.NeedHelpActivity"
+            android:screenOrientation="portrait"/>
+        <!--碳控环保-->
+        <activity android:name=".activity.CCEnvironmentalProtectionActivity"
+            android:screenOrientation="portrait"/>
+        <!--环保行-->
+        <activity android:name=".activity.EnvironmentalProtectionLineActivity"
+            android:screenOrientation="portrait"/>
+        <!--碳控行-->
+        <activity android:name=".activity.CCLineActivity"
+            android:screenOrientation="portrait"/>
+
+        <!--游戏充值-->
+        <activity android:name=".activity.Game_Top_Up_Activity"
+            android:screenOrientation="portrait"/>
+        <!--游戏中心-->
+        <activity android:name=".activity.GameCenterActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
