--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,10 @@ android {
             keyPassword properties.getProperty("SIGNING_CONFINGS_DEBUG_KEY_PASSWORD")
         }
         release {
-//            storeFile file(properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_FILE"))
-//            storePassword properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_PASSWORD")
-//            keyAlias properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_ALIAS")
-//            keyPassword properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_PASSWORD")
+            storeFile file(properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_FILE"))
+            storePassword properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_PASSWORD")
+            keyAlias properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_ALIAS")
+            keyPassword properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_PASSWORD")
         }
     }
 
@@ -77,11 +77,14 @@ android {
             minifyEnabled false
             zipAlignEnabled false
             shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
         release {
             minifyEnabled false
             zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
 
          //多个变体自定义输出配置
@@ -92,13 +95,12 @@ android {
                 if (outputFile != null && outputFile.name.endsWith('.apk')) {
                     if (variant.buildType.name == "debug") {
                         fileName = "$ccf _v${defaultConfig.versionName}_${generateTime()}_code${defaultConfig.versionCode}_debug.apk"
-                        outputFile = new File(outputFile.parent, fileName)
                     } else if (variant.buildType.name == "release") {
                         fileName = "ccf_V${defaultConfig.versionName}_code${defaultConfig.versionCode}_${generateTime()}_release.apk"
-                        outputFile = new File(outputFile.parent, fileName)
                     }
                     //def file = new File(fileName)
                     //output.outputFile = file
+                    //ourput.outputFile = new File(outputFile.parent, fileName)
                 }
             }
         }
