--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -25,6 +26,7 @@ allprojects {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url "https://jitpack.io"}
     }
 }
 
