--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,10 @@ android {
             keyPassword properties.getProperty("SIGNING_CONFINGS_DEBUG_KEY_PASSWORD")
         }
         release {
-//            storeFile file(properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_FILE"))
-//            storePassword properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_PASSWORD")
-//            keyAlias properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_ALIAS")
-//            keyPassword properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_PASSWORD")
+            storeFile file(properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_FILE"))
+            storePassword properties.getProperty("SIGNING_CONFINGS_REALEASE_STORE_PASSWORD")
+            keyAlias properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_ALIAS")
+            keyPassword properties.getProperty("SIGNING_CONFINGS_REALEASE_KEY_PASSWORD")
         }
     }
 
