--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,10 +58,7 @@
             android:name=".activity.MainPageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/PopupMenuTheme">
-            <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+
         </activity>
         <!-- ********************************************TALKING DATA********************************************************** -->
 
@@ -388,7 +385,12 @@
         <!-- 上传图片 -->
         <activity
             android:name=".activity.UploadImageActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activity.DownLoadFileActivity">
 
         </activity>
